# UnityMiniCRM

./: .editorconfig  ASSIGNMENT.md  LIVE-CODING-ASSIGNMENT.md  LiveCodingExercise.md  README.md  SOLUTION.md
backend/: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
backend/config/: settings.py
backend/src/unityminicrm/: settings.py  urls.py
backend/src/unityminicrm/core/: models.py  serializers.py  urls.py  views.py
backend/src/unityminicrm/core/migrations/: 0001_initial.py
backend/tasks/: models.py  serializers.py  tests.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_company_contact_task_assigned_to_task_created_by_and_more.py  0003_interaction.py  0003_timelineevent.py  0004_remove_timelineevent_related_company_and_more.py  0005_remove_timelineevent_company_and_more.py  0006_notification.py  0007_note.py  0008_alter_note_options.py  0009_note_created_by.py  0010_alter_note_options_note_updated_at.py  0011_remove_note_company_remove_note_contact_and_more.py  0012_delete_note.py
backend/tasks/utils/: email.py
backend/templates/emails/: company_created.html  deal_created.html
frontend/: .gitignore  package.json
frontend-react/: package-lock.json  package.json  vite.config.js
frontend-react/src/: App.jsx
frontend-react/src/components/: AddCompanyModal.jsx  AddContactModal.jsx  AddDealModal.jsx
frontend-react/src/pages/: Dashboard.jsx  Login.jsx
frontend-vue/: .gitignore  package-lock.json  package.json
frontend-vuejs/: README.md  package-lock.json
frontend/src/: App.vue
(+15 files in other folders)
