[project]
name = "unityminicrm"
version = "0.1.0"

classifiers = ["Private :: Do Not Upload"]

requires-python = ">=3.12"
dependencies = [
    "Django==5.2.15",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.17.1",
]


[build-system]
build-backend = "uv_build"
requires = ["uv_build==0.11.19"]
